<resources>
    <string name="app_name">Network</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="btn_back">Back</string>
    <string name="btn_reg">Register</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="GroupChat">Group Chat</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Save">Save</string>
    <string name="chat">Chat</string>
    <string name="type_message">Type Message</string>
    <string name="btn_sign_up">Type Message</string>
    <string name="logout">Logout</string>
</resources>