<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
            />

        <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:inputType="text"
        android:hint="@string/enter_name"
        android:padding="12dp"
        android:textColor="@color/colorText" />

        <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_email"
        android:padding="12dp"
        android:textColor="@color/colorText" />

        <EditText
        android:id="@+id/et_reg_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_password"
        android:padding="12dp"
        android:textColor="@color/colorText" />

        <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_confirm_password"
        android:padding="12dp"
        android:textColor="@color/colorText" />

        <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="15dp"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_reg"/>

        <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_back"/>

    </LinearLayout>

