<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:paddingBottom="20dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center|top"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@mipmap/profile1_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        />



    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_email"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/et_login_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_password"
        android:padding="12dp"
        android:textColor="@color/colorText" />



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="15dp"
        android:textColor="@color/colorAccent"
        android:text="@string/Login"/>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="@string/register"/>

</LinearLayout>